@@ -10,6 +10,8 @@ Changes to proxytunnel version 1.6.0 -- Mon Feb  6 17:00:00 CET 2006
 - Makefile vars now no longer override environment versions
 - Added proxy-bouncing support, courtesy of Dag Wieers, authentication
   only works on the FIRST proxy, not on a second proxy !!
+- Added SSL encryption to the data-layer to fool proxies that do deep-
+  packet inspection, by: Alex Peuchert proxytunnel@peuchert.de
 
 Changes to proxytunnel version 1.5.2 -- Fri Dec 16 09:27:11 CET 2005
 
